--- a/src/packages/xxWeb-box/lessSource/theme/theme-jeecg.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-jeecg.less
@@ -141,7 +141,7 @@
   .el-menu--popup{
     background-color: @--main-bg-color;
   }
-  .box-item-link{
+  .box-item-link,.el-submenu{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
