--- a/src/packages/xxWeb-box/lessSource/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-thunder.less
@@ -163,7 +163,7 @@
     background-color: @--main-bg-color;
     padding: 0;
   }
-  .box-item-link{
+  .box-item-link,.el-submenu{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
