--- a/src/packages/xxWeb-box/lessSource/theme/theme-v2board.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-v2board.less
@@ -162,7 +162,7 @@
   .el-menu{
     padding: 0 14px;
   }
-  .box-item-link{
+  .box-item-link,.el-submenu{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color;
       background-color: @--main-bg-color;
