--- a/src/packages/xxWeb-box/lessSource/index.less
+++ b/src/packages/xxWeb-box/lessSource/index.less
@@ -194,9 +194,6 @@ html,body{
       height:52px;
       line-height: 52px;
     }
-    .el-submenu .xxweb-box-icon{
-      margin-right: 1.25rem;
-    }
     .topmenu+.topmenu{
      margin-left: 15px;
     }
@@ -232,6 +229,13 @@ html,body{
       overflow: hidden;
       .el-menu-item i,.el-submenu__title i{
         color: inherit;
+      }
+      .el-submenu__title,.el-menu-item{
+        display: flex;
+        flex-flow: row;
+        justify-content: flex-start;
+        align-items: center;
+        grid-gap: 4px;
       }
     }
     .menu-obj:not(.el-menu--collapse) {
@@ -408,23 +412,37 @@ html,body{
         display: none;
       }
     }
-    .el-icon-dog-icon {
-      width: 24px;
-      margin-right: 5px;
-      font-size: 18px;
-      vertical-align: middle
-    }
-    .xxweb-box-icon{
-      font-size: 14px;
-      width: 14px;
-      height: 14px;
-      object-fit: cover;
-      &::after,&::before{
-        font-size: 14px;
-      }
-    }
   }
 }
-.box-item-link{
-  text-decoration: none !important;
+div[class*="xxWeb-"]{
+  .xxweb-box-icon{
+    display: flex;
+    align-items: center;
+    font-size: 14px !important;
+    width: 14px !important;
+    height: 14px;
+    object-fit: cover;
+    margin-right: 0!important;
+    line-height: 14px;
+    &::after,&::before{
+      font-size: 14px;
+    }
+  }
+  .box-item-link{
+    text-decoration: none !important;
+    .el-menu-item{
+      display: flex;
+      flex-flow: row;
+      grid-gap: 4px;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+  .el-submenu__title{
+    display: flex;
+    flex-flow: row;
+    grid-gap: 4px;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
