--- a/src/packages/xxWeb-box/lessSource/theme/theme-wdp.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-wdp.less
@@ -179,7 +179,7 @@
   .el-menu--popup{
     background-color: @--main-bg-color;
   }
-  .box-item-link{
+  .box-item-link,.el-submenu{
     .el-submenu__title,.el-menu-item{
       color: @--menu-item-text-color !important;
       background-color: @--main-bg-color !important;
