优化菜单和主题样式

--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -2,28 +2,28 @@ body {
   font-size: 4px;
 }
 
-.xxWeb-box[theme='v2board'] {
-  .header {
-    background: #409EFF;
-    color: #fff;
-  }
-  .top-header {
-    .logo {
-      background: #409EFF;
-      color: #fff;
-    }
-  }
-  .side-menu {
-    .side-menu-header {
-      background: #409EFF;
-      color: #fff;
-    }
-  }
-  .header-content {
-    .right-con {
-      .el-dropdown {
-        color: #fff !important;
-      }
-    }
-  }
-}
+//.xxWeb-box[theme='v2board'] {
+//  .header {
+//    background: #409EFF;
+//    color: #fff;
+//  }
+//  .top-header {
+//    .logo {
+//      background: #409EFF;
+//      color: #fff;
+//    }
+//  }
+//  .side-menu {
+//    .side-menu-header {
+//      background: #409EFF;
+//      color: #fff;
+//    }
+//  }
+//  .header-content {
+//    .right-con {
+//      .el-dropdown {
+//        color: #fff !important;
+//      }
+//    }
+//  }
+//}
