--- a/src/packages/xxWeb-box/lessSource/index.less
+++ b/src/packages/xxWeb-box/lessSource/index.less
@@ -142,7 +142,10 @@ html,body{
           height: 27px;
           width: 27px;
           display: inline-block;
-          background: url("../../assets/imgs/diamond.svg") no-repeat left bottom;
+          img{
+            object-fit: contain;
+            width: 100%;
+          }
           background-size: contain;
           float: left;
           z-index: 2;
