--- a/src/packages/xxWeb-box/lessSource/index.less
+++ b/src/packages/xxWeb-box/lessSource/index.less
@@ -177,6 +177,7 @@ html,body{
       overflow: hidden;
       white-space: nowrap;
       transition: width .5s;
+      color:var(--el-text-color-regular);
     }
     .menu-search-icon{
       cursor: pointer;
