--- a/src/packages/xxWeb-box/lessSource/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-thunder.less
@@ -13,7 +13,7 @@
   @--menu-sub-item-hover-bg-color:@--main-bg-color;
   @--logo-bg-color:#002140;
   @--header-shadow-color:#00000033;
-  @--topMenu-header-color:#fff;
+  @--topMenu-header-color:#606266;
   @--topMenu-header-bg-color:@--main-bg-color;
   @--topMenu-shadow-color:rgba(0,21,41,0.08);
   @--contextmenu-bg-color:#eee;
