--- a/src/packages/xxWeb-box/lessSource/theme/theme-vue-admin.less
+++ b/src/packages/xxWeb-box/lessSource/theme/theme-vue-admin.less
@@ -12,7 +12,7 @@
   @--submenu-item-bg-color:#1f2d3d;
   @--logo-bg-color:#304156;
   @--header-shadow-color:#00000033;
-  @--topMenu-header-color:#fff;
+  @--topMenu-header-color:#606266;
   @--topMenu-header-bg-color:@--main-bg-color;
   @--topMenu-shadow-color:rgba(0,21,41,0.08);
   @--contextmenu-bg-color:#eee;
